--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Bookman Old Style", serif;
   line-height: 1.6;
   margin: 0;
   padding: 0;
@@ -13,6 +13,7 @@ body {
 
 th {
   background-color: #f2f2f2;
+  font-family: "Bookman Old Style", serif;
   font-weight: 500;
   cursor: pointer;
   user-select: none;
@@ -51,6 +52,7 @@ h1 {
   color: #2c3e50;
   text-align: center;
   margin-bottom: 2rem;
+  font-family: "Bookman Old Style", serif;
 }
 
 .search-container {
@@ -68,6 +70,7 @@ button {
   font-size: 1rem;
   border: 1px solid #ddd;
   border-radius: 4px;
+  font-family: "Bookman Old Style", serif;
 }
 
 input[type="text"] {
@@ -91,6 +94,7 @@ button:hover {
   text-align: center;
   margin-bottom: 1rem;
   font-weight: 500;
+  font-family: "Bookman Old Style", serif;
 }
 
 #tableContainer {
@@ -109,6 +113,7 @@ td {
   padding: 0.75rem;
   text-align: left;
   border-bottom: 1px solid #ddd;
+  font-family: "Bookman Old Style", serif;
 }
 
 th {
@@ -154,6 +159,7 @@ tr:hover {
   background-color: #6b7072;
   color: white;
   cursor: pointer;
+  font-family: "Bookman Old Style", serif;
   transition: background-color 0.3s ease;
 }
 
